--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "business-data-manage",
+  "name": "opensea-service",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -21,46 +21,27 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@google-cloud/logging-bunyan": "^3.2.0",
-    "@google-cloud/storage": "^5.15.3",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
-    "@owen05/dodo-sdk-v2": "^2.0.46-web.2",
-    "@sentry/node": "^6.18.0",
-    "@sentry/tracing": "^6.18.0",
-    "amqplib": "^0.8.0",
-    "bunyan": "^1.8.15",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2",
-    "config": "^3.3.6",
-    "create-hmac": "^1.1.7",
-    "ethers": "^5.4.7",
-    "exceljs": "^4.3.0",
-    "ioredis": "^4.28.0",
-    "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.21",
-    "moment": "^2.29.1",
-    "node-rsa": "^1.1.1",
-    "node-schedule": "^2.0.0",
-    "node-xlsx": "^0.21.0",
-    "pg": "^8.7.1",
-    "redlock": "^5.0.0-beta.1",
+    "axios": "^0.27.2",
+    "config": "^3.3.7",
+    "moment": "^2.29.3",
+    "opensea-js": "^3.0.4",
+    "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "request-validate": "^1.0.9",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.2.38",
-    "web3": "^1.7.0",
-    "web3-eth-contract": "^1.7.0"
+    "typeorm": "^0.3.6"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.2.0",
+    "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.11.4",
+    "@types/jest": "27.4.1",
+    "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
